syntax = "proto3";

package com.road.yishi.proto.questionnarie;

message QuestionDataRspInfo {
  int32 questId = 1;
  string answer = 2;
}
